pridana polozka pre item

--- a/index.html
+++ b/index.html
@@ -412,13 +412,13 @@
         <section class="product_slider">
             <div class="slider-container">
                 <!-- <div class="customNavigation"><a class="btn prev"><i class="fa fa-caret-left"></i></a><a class="btn next"><i class="fa fa-caret-right"></i></a></div> -->
-                <div class="owl-carousel">
-                    <div class="item">1</div>
-                    <div class="item">2</div>
-                    <div class="item">3</div>
-                    <div class="item">4</div>
-                    <div class="item">5</div>
-                    <div class="item">6</div>
+                <div class="owl-carousel owl-carouselBRATU">
+                    <div class="itemBRATU">1</div>
+                    <div class="itemBRATU">2</div>
+                    <div class="itemBRATU">3</div>
+                    <div class="itemBRATU">4</div>
+                    <div class="itemBRATU">5</div>
+                    <div class="itemBRATU">6</div>
                 </div>
             </div>
         </section>
@@ -427,13 +427,13 @@
         <section class="product_slider">
             <div class="slider-container">
                 <!-- <div class="customNavigation"><a class="btn prev"><i class="fa fa-caret-left"></i></a><a class="btn next"><i class="fa fa-caret-right"></i></a></div> -->
-                <div class="owl-carousel">
-                    <div class="item">1</div>
-                    <div class="item">2</div>
-                    <div class="item">3</div>
-                    <div class="item">4</div>
-                    <div class="item">5</div>
-                    <div class="item">6</div>
+                <div class="owl-carousel owl-carouselBRATU">
+                    <div class="itemBRATU">1</div>
+                    <div class="itemBRATU">2</div>
+                    <div class="itemBRATU">3</div>
+                    <div class="itemBRATU">4</div>
+                    <div class="itemBRATU">5</div>
+                    <div class="itemBRATU">6</div>
                 </div>
             </div>
         </section>
@@ -442,13 +442,13 @@
         <section class="product_slider">
             <div class="slider-container">
                 <!-- <div class="customNavigation"><a class="btn prev"><i class="fa fa-caret-left"></i></a><a class="btn next"><i class="fa fa-caret-right"></i></a></div> -->
-                <div class="owl-carousel">
-                    <div class="item">1</div>
-                    <div class="item">2</div>
-                    <div class="item">3</div>
-                    <div class="item">4</div>
-                    <div class="item">5</div>
-                    <div class="item">6</div>
+                <div class="owl-carousel owl-carouselBRATU">
+                    <div class="itemBRATU">1</div>
+                    <div class="itemBRATU">2</div>
+                    <div class="itemBRATU">3</div>
+                    <div class="itemBRATU">4</div>
+                    <div class="itemBRATU">5</div>
+                    <div class="itemBRATU">6</div>
                 </div>
             </div>
         </section>
