--- a/polozka.html
+++ b/polozka.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="./css/newsletter.css">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/polozka.css">
-    <!-- <link rel="stylesheet" href="./css/product_slider.css"> -->
+    <link rel="stylesheet" href="./css/product_slider.css">
+    <link rel="stylesheet" href="./css/profile_intro.css">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
@@ -504,49 +505,53 @@
         <section class="product_slider">
             <div class="slider-container">
                 <!-- <div class="customNavigation"><a class="btn prev"><i class="fa fa-caret-left"></i></a><a class="btn next"><i class="fa fa-caret-right"></i></a></div> -->
-                <div class="owl-carousel">
-                    <div class="item">1</div>
-                    <div class="item">2</div>
-                    <div class="item">3</div>
-                    <div class="item">4</div>
-                    <div class="item">5</div>
-                    <div class="item">6</div>
+                <div class="owl-carousel owl-carouselBRATU ">
+                    <div class="itemBRATU">1</div>
+                    <div class="itemBRATU">2</div>
+                    <div class="itemBRATU">3</div>
+                    <div class="itemBRATU">4</div>
+                    <div class="itemBRATU">5</div>
+                    <div class="itemBRATU">6</div>
                 </div>
-            </div>
-        </section>
-        
-        <div class="label"> Todays pick</div>
-        <section class="product_slider">
-            <div class="slider-container">
-                <!-- <div class="customNavigation"><a class="btn prev"><i class="fa fa-caret-left"></i></a><a class="btn next"><i class="fa fa-caret-right"></i></a></div> -->
-                <div class="owl-carousel">
-                    <div class="item">1</div>
-                    <div class="item">2</div>
-                    <div class="item">3</div>
-                    <div class="item">4</div>
-                    <div class="item">5</div>
-                    <div class="item">6</div>
-                </div>
-            </div>
+            </div>        
         </section>
 
-        <div class="label"> Nedávno pozreté</div>
+        <div class="label"> Naposledy pozreté</div>
         <section class="product_slider">
             <div class="slider-container">
                 <!-- <div class="customNavigation"><a class="btn prev"><i class="fa fa-caret-left"></i></a><a class="btn next"><i class="fa fa-caret-right"></i></a></div> -->
-                <div class="owl-carousel">
-                    <div class="item">1</div>
-                    <div class="item">2</div>
-                    <div class="item">3</div>
-                    <div class="item">4</div>
-                    <div class="item">5</div>
-                    <div class="item">6</div>
+                <div class="owl-carousel owl-carouselBRATU ">
+                    <div class="itemBRATU">1</div>
+                    <div class="itemBRATU">2</div>
+                    <div class="itemBRATU">3</div>
+                    <div class="itemBRATU">4</div>
+                    <div class="itemBRATU">5</div>
+                    <div class="itemBRATU">6</div>
                 </div>
-            </div>
+            </div>        
         </section>
     </section>
 
-    <div style="height:1000px ;"></div>
+    <section class="info_section">
+        <div class="info_nadpis">DORUČENIE A VRÁTENIE TOVARU </div>
+        <div class="info">
+            <div class="info1">
+                <div class="info_mininadpis"> O nás</div>
+                <div>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam hic, animi corrupti nulla eius pariatur modi consequatur quo nisi magni? Voluptatem, perferendis. Sed, exercitationem est adipisci delectus repellendus dolore.
+                </div>
+                <div><br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam hic, animi corrupti nulla eius pariatur modi consequatur quo nisi magni? Voluptatem, perferendis. Sed, exercitationem est adipisci delectus repellendus dolore.
+                </div>
+            </div>
+            <div class="info2">
+                <div class="info_mininadpis"> Doručenie</div>
+                <div> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, sequi. Voluptas cumque et, id inventore odio nobis enim iure dicta autem fuga veritatis, ullam iste possimus eos. Eum, ratione voluptas?</div>
+                <div class="info_mininadpis"> Ako vrátim tovar ? </div>
+                <div> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, sequi. Voluptas cumque et, id inventore odio nobis enim iure dicta autem fuga veritatis, ullam iste possimus eos. Eum, ratione voluptas?</div>
+            </div>
+        </div>
+    </section>
 
     <section class="newsletter">
         <div class="newsletter_obsah">  
@@ -639,6 +644,6 @@
 
     <script src="./javascript/polozka.js"></script>
     <script src="https://kit.fontawesome.com/39951b4cb0.js" crossorigin="anonymous" defer></script>
-    <!-- <script src="./javascript/product_slider.js"></script> -->
+    <script src="./javascript/product_slider.js"></script>
 </body>
 </html>
