--- a/polozka.html
+++ b/polozka.html
@@ -382,7 +382,7 @@
                 <div class="product_images_container">
                     <div id="sync1" class="owl-carousel owl-theme">
                         <div class="item">
-                            <h1>1</h1>
+                            <img src="./images/sample_topanka.jpg">
                         </div>
                         <div class="item">
                             <h1>2</h1>
@@ -409,28 +409,28 @@
                 
                     <div id="sync2" class="owl-carousel owl-theme">
                         <div class="item">
-                            <h1>1</h1>
+                            <img src="./images/sample_topanka.jpg">
                         </div>
                         <div class="item">
-                            <h1>2</h1>
+                            <img src="./images/sample_topanka.jpg">
                         </div>
                         <div class="item">
-                            <h1>3</h1>
+                            <img src="./images/sample_topanka.jpg">
                         </div>
                         <div class="item">
-                            <h1>4</h1>
+                            <img src="./images/sample_topanka.jpg">
                         </div>
                         <div class="item">
-                            <h1>5</h1>
+                            <img src="./images/sample_topanka.jpg">
                         </div>
                         <div class="item">
-                            <h1>6</h1>
+                            <img src="./images/sample_topanka.jpg">
                         </div>
                         <div class="item">
-                            <h1>7</h1>
+                            <img src="./images/sample_topanka.jpg">
                         </div>
                         <div class="item">
-                            <h1>8</h1>
+                            <img src="./images/sample_topanka.jpg">
                         </div>
                     </div>
                 </div>
