admin dashboard, univerzálny popup hotový

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -447,7 +447,7 @@
                 </article>
 
 
-                <article class="product_item_relative">
+                <article class="product_item_relative" data-product-id="1">
                     <div class="item_img">
                         <img src="./images/sample_topanka.jpg">
                     </div>
@@ -964,17 +964,17 @@
 
 
         <!-- popup okno -->
-        <div class="popup_overlay">
+        <div id="popup_overlay">
             <div class="popup_container">
                 <div class="popup_content">
                     <div class="popup_message">
                         <h2>Ste si istý?</h2>
-                        <p>Chcete vymazať produkt s ID: 1</p>
+                        <p></p>
                     </div>
                     
                     <div class="popup_buttons">
-                        <button id="confirm_popup">Áno</button>
-                        <button id="cancel_popup">Nie</button>
+                        <button id="popup_accept">Áno</button>
+                        <button id="popup_cancel">Nie</button>
                     
                     </div>
                 </div>
