popup na opustenie dashboardu + responzivne, zoznam objednávok aj responzívne, tlačidlo opustit admin dashboard

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -384,9 +384,6 @@
     <main>
         <aside class="text_filter">
             
-
-
-
             <div class="filter_menu">
                 <button class="filter_menu_item special" id="filter_open_btn">Filter</button>
                 <div class="filter_kategorie", id="sliding_filter">
@@ -402,20 +399,12 @@
 
 
 
-
-        
-
-
-
-
-
-
-
-
-
         <section class="produkty_kontajner">
             <section class="text_divider"> <!-- text admin dashboard a potom oddelovať čiara -->
-                <h1>Admin Dashboard</h1>
+                <div class="h1_buttons">
+                    <h1>Admin Dashboard</h1>
+                    <button id="logout_btn">Opustiť rozhranie</button>
+                </div>
                 <hr class="hr_divider">
             </section>
 
@@ -991,6 +980,7 @@
         <script src="./javascript/price_slider.js"></script>
         <script src="./javascript/filter_resize.js"></script>
         <script src="./javascript/admin_dash.js"></script>
+        <script src="./javascript/popup_okno.js"></script>
     </main>
 
 
