--- a/polozka.html
+++ b/polozka.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/polozka.css">
     <link rel="stylesheet" href="./css/product_slider.css">
     <link rel="stylesheet" href="./css/profile_intro.css">
+    <link rel="stylesheet" href="./css/kosik_sidebar.css">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
@@ -167,7 +168,7 @@
         <div class="right_part">
             <input class="vyhladaj_input"/>
             <a href="prihlasenie.html" class="logo_link"><div class="profil">PROFIL </div></a>
-            <div class="kosik last">KOSIK </div>
+            <div class="kosik last" onclick="toggleSidebarKosik()">KOSIK </div>
         </div>
     </nav>
 
@@ -374,6 +375,61 @@
         </ul>
     </div>
     <div class="overlay" onclick="toggleSidebar()"></div>
+    <div class="kosik_sidebar" id="kosik_sidebar">
+        <div class="kosik_sidebar_header">
+            <p>MôJ KOŠÍK  </p>
+            <div >
+                <i class="fa-solid fa-arrow-right" onclick="toggleSidebarKosik(event)"></i>
+            </div>
+        </div>
+        <div class="kosik_sidebar_items_container">
+            <div class="kosik_sidebar_item">
+                <div id="kosik_sidebar_item_photo"></div>
+                <div class="kosik_sidebar_item_information">
+                    <div class="kosik_sidebar_item_name"> <span id="kosik_sidebar_item_name_specified"> Air Jordan 4 RM "University Blue"</span></div>
+                    <div class="kosik_sidebar_item_size">EUR: <span id="kosik_sidebar_item_size_specified">40.5</span> </div>
+                </div>
+            </div>
+            <div class="kosik_sidebar_item">
+                <div id="kosik_sidebar_item_photo"></div>
+                <div class="kosik_sidebar_item_information">
+                    <div class="kosik_sidebar_item_name"> <span id="kosik_sidebar_item_name_specified"> Air Jordan 4 RM "University Blue"</span></div>
+                    <div class="kosik_sidebar_item_size">EUR: <span id="kosik_sidebar_item_size_specified">40.5</span> </div>
+                </div>
+            </div>
+            <div class="kosik_sidebar_item">
+                <div id="kosik_sidebar_item_photo"></div>
+                <div class="kosik_sidebar_item_information">
+                    <div class="kosik_sidebar_item_name"> <span id="kosik_sidebar_item_name_specified"> Air Jordan 4 RM "University Blue"</span></div>
+                    <div class="kosik_sidebar_item_size">EUR: <span id="kosik_sidebar_item_size_specified">40.5</span> </div>
+                </div>
+            </div>
+            <div class="kosik_sidebar_item">
+                <div id="kosik_sidebar_item_photo"></div>
+                <div class="kosik_sidebar_item_information">
+                    <div class="kosik_sidebar_item_name"> <span id="kosik_sidebar_item_name_specified"> Air Jordan 4 RM "University Blue"</span></div>
+                    <div class="kosik_sidebar_item_size">EUR: <span id="kosik_sidebar_item_size_specified">40.5</span> </div>
+                </div>
+            </div>
+            <div class="kosik_sidebar_item">
+                <div id="kosik_sidebar_item_photo"></div>
+                <div class="kosik_sidebar_item_information">
+                    <div class="kosik_sidebar_item_name"> <span id="kosik_sidebar_item_name_specified"> Air Jordan 4 RM "University Blue"</span></div>
+                    <div class="kosik_sidebar_item_size">EUR: <span id="kosik_sidebar_item_size_specified">40.5</span> </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="kosik_sidebar_zaverecne_info">
+            <div class="kosik_sidebar_zaverecne_info_medzisucet">
+                <div class="kosik_sidebar_zaverecne_info_medzisucet1">Medzisúčet košíka </div>
+                <div class="kosik_sidebar_zaverecne_info_medzisucet2"><span id="kosik_sidebar_zaverecne_info_medzisucet_specified">150.00</span> </div>
+                
+            </div>
+            <a href="kosik.html" class="prejst_do_pokladne_button"> Prejsť do pokladne </a>
+        </div>
+    </div>
+    <div class="overlay2" onclick="toggleSidebarKosik()"></div>
 
 
     <section class="product_main_info">
@@ -645,5 +701,6 @@
     <script src="./javascript/polozka.js"></script>
     <script src="https://kit.fontawesome.com/39951b4cb0.js" crossorigin="anonymous" defer></script>
     <script src="./javascript/product_slider.js"></script>
+    <script src="./javascript/kosik_sidebar.js"></script>
 </body>
 </html>
