admin dashboard login sablona a prepojenia

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -403,7 +403,7 @@
             <section class="text_divider"> <!-- text admin dashboard a potom oddelovať čiara -->
                 <div class="h1_buttons">
                     <h1>Admin Dashboard</h1>
-                    <button id="logout_btn">Opustiť rozhranie</button>
+                    <a id="logout_btn">Opustiť rozhranie</a>
                 </div>
                 <hr class="hr_divider">
             </section>
