uprava navbar a fotokolaz

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
         </div>
         <div class="right_part">
             <input class="vyhladaj_input"/>
+                <i class="fa-solid fa-magnifying-glass "></i>
             <a href="prihlasenie.html" class="logo_link"><div class="profil">PROFIL </div></a>
             <div class="kosik last" onclick="toggleSidebarKosik()">KOSIK </div>
         </div>
