sablona polozka produktu, super js scroll okno a ine upravy

--- a/vypredaj.html
+++ b/vypredaj.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/dropdown.css">
     <link rel="stylesheet" href="./css/menu_sidebar.css">
     <link rel="stylesheet" href="./css/kosik_sidebar.css">
+    <link rel="stylesheet" href="./css/profile_intro.css">
 
 </head>
 <body>
@@ -995,8 +996,29 @@
 
 
     
+<footer class="joined_footer">
+        <section class="info_section">
+            <div class="info_nadpis">DORUČENIE A VRÁTENIE TOVARU </div>
+            <div class="info">
+                <div class="info1">
+                    <div class="info_mininadpis"> O nás</div>
+                    <div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam hic, animi corrupti nulla eius pariatur modi consequatur quo nisi magni? Voluptatem, perferendis. Sed, exercitationem est adipisci delectus repellendus dolore.
+                    </div>
+                    <div><br>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam hic, animi corrupti nulla eius pariatur modi consequatur quo nisi magni? Voluptatem, perferendis. Sed, exercitationem est adipisci delectus repellendus dolore.
+                    </div>
+                </div>
+                <div class="info2">
+                    <div class="info_mininadpis"> Doručenie</div>
+                    <div> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, sequi. Voluptas cumque et, id inventore odio nobis enim iure dicta autem fuga veritatis, ullam iste possimus eos. Eum, ratione voluptas?</div>
+                    <div class="info_mininadpis"> Ako vrátim tovar ? </div>
+                    <div> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, sequi. Voluptas cumque et, id inventore odio nobis enim iure dicta autem fuga veritatis, ullam iste possimus eos. Eum, ratione voluptas?</div>
+                </div>
+            </div>
+        </section>
 
-    <footer class="joined_footer">
+
         <section class="newsletter">
             <div class="newsletter_obsah">  
                 <div class="newsletter_label"> Nezmeškaj veľkú šancu </div>
