--- a/zoznam_produktov.html
+++ b/zoznam_produktov.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/dropdown.css">
     <link rel="stylesheet" href="./css/menu_sidebar.css">
     <link rel="stylesheet" href="./css/kosik_sidebar.css">
+    <link rel="stylesheet" href="./css/profile_intro.css">
 
 </head>
 <body>
@@ -961,6 +962,28 @@
     
 
     <footer class="joined_footer">
+        <section class="info_section">
+            <div class="info_nadpis">DORUČENIE A VRÁTENIE TOVARU </div>
+            <div class="info">
+                <div class="info1">
+                    <div class="info_mininadpis"> O nás</div>
+                    <div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam hic, animi corrupti nulla eius pariatur modi consequatur quo nisi magni? Voluptatem, perferendis. Sed, exercitationem est adipisci delectus repellendus dolore.
+                    </div>
+                    <div><br>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam hic, animi corrupti nulla eius pariatur modi consequatur quo nisi magni? Voluptatem, perferendis. Sed, exercitationem est adipisci delectus repellendus dolore.
+                    </div>
+                </div>
+                <div class="info2">
+                    <div class="info_mininadpis"> Doručenie</div>
+                    <div> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, sequi. Voluptas cumque et, id inventore odio nobis enim iure dicta autem fuga veritatis, ullam iste possimus eos. Eum, ratione voluptas?</div>
+                    <div class="info_mininadpis"> Ako vrátim tovar ? </div>
+                    <div> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, sequi. Voluptas cumque et, id inventore odio nobis enim iure dicta autem fuga veritatis, ullam iste possimus eos. Eum, ratione voluptas?</div>
+                </div>
+            </div>
+        </section>
+
+
         <section class="newsletter">
             <div class="newsletter_obsah">  
                 <div class="newsletter_label"> Nezmeškaj veľkú šancu </div>
@@ -1043,11 +1066,15 @@
         </section>
     </footer>
 
+
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     
     <script src="./javascript/side_menubar.js"></script>
     <script src="./javascript/kosik_sidebar.js"></script>
+    <script src="./javascript/zoznam_produktov.js"></script>
+
     <script src="https://kit.fontawesome.com/39951b4cb0.js" crossorigin="anonymous"></script>
 </body>
 </html>
